# contrib_oncrpc_1.14

./: 1.14  CMakeLists.txt  oncrpc.iwz  readme  readme.txt
librpc/: getrpcpo.c  oncrpc.def  oncrpc.lib  portmap.c  xdr_floa.c
service/: inst_pm.c  makefile  portmap.rc  portmapd.rc
test/: COU.h  COU_clnt.c  COU_svc.c  COU_xdr.c
